...
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:onClick="handleClick"
            android:text="Enter Another Job Offer" />

        <Button
            android:id="@+id/return_main_menu_button"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:onClick="handleClick"
            android:text="Return to Main Menu" />

    </LinearLayout>
...
